# poppy_ros

./: README.md  workspace.code-workspace
poppy_torso_control/: CMakeLists.txt  package.xml
poppy_torso_control/launch/: poppy_torso_control.launch
poppy_torso_control/scripts/: test_control_moveit.py  test_offset_moveit.py
poppy_torso_control/src/: poppy_torso_collision_checker.cpp  poppy_torso_forward_kinematics.cpp
poppy_torso_control/srv/: CollisionDistance.srv  OffsetMovement.srv  PlanMovement.srv
poppy_torso_description/config/: config.rviz  gazebo_control.yaml
poppy_torso_description/launch/: init.txt  poppy_torso_gazebo.launch  poppy_torso_gazebo_control.launch  poppy_torso_gazebo_sim.launch
poppy_torso_description/urdf/: poppy_torso copy.urdf  poppy_torso.urdf  poppy_torso.urdf.bk  poppy_torso_original.urdf
poppy_torso_gazebo/: CMakeLists.txt  package.xml
poppy_torso_gazebo/config/: gazebo_control.yaml  gazebo_control_trajectory.yaml
poppy_torso_gazebo/launch/: poppy_torso_gazebo.launch  poppy_torso_gazebo_control.launch  poppy_torso_gazebo_control_position.launch  poppy_torso_gazebo_control_trajectory.launch  poppy_torso_gazebo_position.launch  poppy_torso_gazebo_sim.launch  poppy_torso_gazebo_trajectory.launch
poppy_torso_moveit/: .setup_assistant  CMakeLists.txt  package.xml
poppy_torso_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  poppy_torso.srdf  ros_controllers.yaml
poppy_torso_moveit/launch/: demo.launch  (+19 more)
poppy_torso_rviz/: manifest.xml
(+5 files in other folders)
